fix logging in and out

--- a/bwapp/client/views/app.ng.html
+++ b/bwapp/client/views/app.ng.html
@@ -1,5 +1,5 @@
 <!-- top navbar-->
-<header ng-include="'client/views/partials/top-navbar.ng.html'" class="topnavbar-wrapper"></header>
+<header ng-include="'client/views/partials/top-navbar.html'" class="topnavbar-wrapper"></header>
 <!-- sidebar-->
 <aside ng-include="'client/views/partials/sidebar.ng.html'" ng-controller="SidebarController" class="aside"></aside>
 <!-- offsidebar-->
