--- a/bwapp/client/angle/less/custom/custom.less
+++ b/bwapp/client/angle/less/custom/custom.less
@@ -11,6 +11,12 @@ svg {
 	height: 100%;
 }
 
+#renderCanvasBab {
+  width: 100%;
+  height: 100%;
+  touch-action: none;
+}
+
 .shadowbox {
   -webkit-box-shadow: 0 5px 15px rgba(0,0,0,.5);
   box-shadow: 0 5px 15px rgba(0,0,0,.5);
