--- a/bwapp/client/views/app.ng.html
+++ b/bwapp/client/views/app.ng.html
@@ -1,7 +1,7 @@
 <!-- top navbar-->
 <header ng-include="'client/views/partials/top-navbar.html'" class="topnavbar-wrapper"></header>
 <!-- sidebar-->
-<aside ng-include="'client/views/partials/sidebar.ng.html'" ng-controller="SidebarController" class="aside"></aside>
+<aside ng-include="'client/views/partials/sidebar.html'" ng-controller="SidebarController" class="aside"></aside>
 <!-- offsidebar-->
 <aside ng-include="'client/views/partials/offsidebar.ng.html'" class="offsidebar"></aside>
 <!-- Main section-->
