--- a/bwapp/client/views/main.ng.jade
+++ b/bwapp/client/views/main.ng.jade
@@ -14,7 +14,7 @@ div(style="top: 118px; width: 100%;  height: 600px;  position: relative;  margin
               small Have a login?
           .pull-right
             // Change this button type to submit to send the form data
-            button.btn.btn-sm.btn-default(type="button", style="list-style-type: none;")
+            button.btn.btn-sm.btn-primary(type="button", style="list-style-type: none;")
               meteor-include(src="_loginButtons")
 
   // END panel
