--- a/bwapp/client/views/partials/top-navbar.ng.jade
+++ b/bwapp/client/views/partials/top-navbar.ng.jade
@@ -30,9 +30,20 @@ nav.navbar.topnavbar(role="navigation")
       //-li
         a(search-open="")
           em.icon-magnifier
+      // START Language list
+      //-li
+        a
+        li(dropdown="", is-open="language.listIsOpen")
+          a(dropdown-toggle="")
+            | {{language.selected}}
+            span.caret
+          ul.dropdown-menu.dropdown-menu-right.animated.fadeInUpShort(role="menu")
+            li(ng-repeat="(localeId, langName) in language.available")
+              a(ng-click="language.set(localeId, $event)") {{langName}}
+      // END Language list
       // START Offsidebar button
       li
-        a(style='color:white')
+        a
           meteor-include(src="_loginButtons")
         //-a(toggle-state="offsidebar-open", no-persist="no-persist")
            em.icon-notebook
