--- a/bwapp/client/views/worldview.ng.jade
+++ b/bwapp/client/views/worldview.ng.jade
@@ -3,8 +3,16 @@
   * Created by wjwong on 7/27/15.
   =========================================================*/
 h3
-  | Block World
-  small {{ "dashboard.WELCOME" | translate:{ appName: app.name } }} !
+  | {{app.name}}
+  small
+    | Navigation:
+    br
+    | Move Camera: Use arrow keys to move camera
+    br
+    | Move Blocks: Click and hold to drag and drop blocks
+    br
+    | Move Blocks Up/Down: Click and hold block, then hold shift key to move up and down
+  //-small {{ "dashboard.WELCOME" | translate:{ appName: } }} !
 .row
   canvas(id="renderCanvasBab" style='width: 100%; height: 600px;')
   //-.col-xs-12.text-center
