working picking and moving

--- a/bwapp/client/views/worldview.ng.jade
+++ b/bwapp/client/views/worldview.ng.jade
@@ -7,7 +7,7 @@ h3
   small
     | Navigation:
     br
-    | Move Camera: Use arrow keys to move camera
+    | Move Camera: Use WASD keys to move camera
     br
     | Move Blocks: Click and hold to drag and drop blocks
     br
