enable ability to find the axis closes to facing up and take into
account of the rotation of the object.

--- a/bwapp/client/angle/less/custom/custom.less
+++ b/bwapp/client/angle/less/custom/custom.less
@@ -17,6 +17,12 @@ svg {
   touch-action: none;
 }
 
+#canvas_2D {
+  position: absolute;
+  top: 20px;
+  pointer-events: none;
+}
+
 .shadowbox {
   -webkit-box-shadow: 0 5px 15px rgba(0,0,0,.5);
   box-shadow: 0 5px 15px rgba(0,0,0,.5);
