--- a/bwapp/client/views/worldview.ng.jade
+++ b/bwapp/client/views/worldview.ng.jade
@@ -15,6 +15,7 @@ h3
   //-small {{ "dashboard.WELCOME" | translate:{ appName: } }} !
 .row
   canvas(id="renderCanvasBab" style='width: 100%; height: 800px;')
+  canvas(id="canvas_2D")
   //-.col-xs-12.text-center
     h2.text-thin Single view content
     p
