--- a/bwapp/client/views/app.ng.html
+++ b/bwapp/client/views/app.ng.html
@@ -10,4 +10,4 @@
    <div ui-view="" autoscroll="false" ng-class="app.viewAnimation" class="content-wrapper"></div>
 </section>
 <!-- Page footer-->
-<footer ng-include="'client/views/partials/footer.ng.html'"></footer>
+<!--footer ng-include="'client/views/partials/footer.ng.html'"></footer-->
