--- a/bwapp/client/angle/less/custom/custom.less
+++ b/bwapp/client/angle/less/custom/custom.less
@@ -15,12 +15,26 @@ svg {
   width: 100%;
   height: 100%;
   touch-action: none;
+  user-select: none;
+  -ms-user-select: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -webkit-touch-callout: none;
+  -webkit-user-drag: none;
 }
 
 #canvas_2D {
   position: absolute;
   top: 20px;
   pointer-events: none;
+  user-select: none;
+  -ms-user-select: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -webkit-touch-callout: none;
+  -webkit-user-drag: none;
 }
 
 .shadowbox {
