--- a/bwapp/client/views/worldview.ng.jade
+++ b/bwapp/client/views/worldview.ng.jade
@@ -3,17 +3,25 @@
   * Created by wjwong on 7/27/15.
   =========================================================*/
 h3
-  | {{app.name}}
+  | Welcome to {{app.name}}
   small
-    | Navigation:
-    br
-    | Move Camera: Use WASD keys to move camera
-    br
-    | Move Blocks: Click and hold to drag and drop blocks
-    br
-    | Move Blocks Up/Down: Click and hold block, then hold shift key to move up and down
   //-small {{ "dashboard.WELCOME" | translate:{ appName: } }} !
 .row
+  div(style="position: absolute; z-index: 10;" class="col-sm-12")
+    div(style='margin-top: 14px')
+      button.btn.btn-default.pull-right(ng-click='resetWorld();') Reset
+      .pull-right &nbsp;&nbsp;
+      //button.btn.btn-default.pull-right Add Block
+    strong Navigation:
+    br
+    strong Move Camera: 
+    | Use WASD keys
+    br
+    strong Move Blocks: 
+    | Click and hold to drag and drop blocks
+    br
+    strong Move Blocks Up/Down: 
+    | Click and hold block, then hold shift key to move up and down
   canvas(id="renderCanvasBab" style='width: 100%; height: 800px;')
   canvas(id="canvas_2D")
   //-.col-xs-12.text-center
