remove ng-circular because it production it would not resolve
still have circularjson which is fine.  added grid system

--- a/bwapp/client/views/worldview.ng.jade
+++ b/bwapp/client/views/worldview.ng.jade
@@ -11,7 +11,7 @@ h3
     div(style='margin-top: 14px')
       button.btn.btn-default.pull-right(ng-click='resetWorld();') Reset
       .pull-right &nbsp;&nbsp;
-      //button.btn.btn-default.pull-right Add Block
+      button.btn.btn-default.pull-right(ng-click='toggleGrid();') Grid
     strong Navigation:
     br
     strong Move Camera: 
