updated with table vs. ground

--- a/bwapp/client/views/partials/top-navbar.ng.jade
+++ b/bwapp/client/views/partials/top-navbar.ng.jade
@@ -15,7 +15,7 @@ nav.navbar.topnavbar(role="navigation")
   // START Nav wrapper
   .nav-wrapper
     // START Left navbar
-    ul.nav.navbar-nav
+    //-ul.nav.navbar-nav
       li
         // Button used to collapse the left sidebar. Only visible on tablet and desktops
         a.hidden-xs(ng-click="app.layout.isCollapsed = !app.layout.isCollapsed")
