--- a/bwapp/client/views/worldview.ng.jade
+++ b/bwapp/client/views/worldview.ng.jade
@@ -2,7 +2,7 @@
   * Module: singleview.ng.jade
   * Created by wjwong on 7/27/15.
   =========================================================*/
-h3
+//-h3
   | Welcome to {{app.name}}
   small
   //-small {{ "dashboard.WELCOME" | translate:{ appName: } }} !
@@ -20,14 +20,9 @@ h3
     strong Move Blocks: 
     | Click and hold to drag and drop blocks
     br
-    strong Move Blocks Up/Down: 
-    | Click and hold block, then hold shift key to move up and down
+    strong Move Up/Down: 
+    | Hold block, then press shift key
+    br
+    | &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; and move mouse up/down
   canvas(id="renderCanvasBab" style='width: 100%; height: 800px;')
   canvas(id="canvas_2D")
-  //-.col-xs-12.text-center
-    h2.text-thin Single view content
-    p
-      | This project is an application skeleton. You can use it to quickly bootstrap your angular webapp projects and dev environment for these projects.
-      br
-      | The seed app doesn"t do much and has most of the feature removed so you can add theme as per your needs just following the demo app examples.
-
