--- a/bwapp/client/angle/less/custom/custom.less
+++ b/bwapp/client/angle/less/custom/custom.less
@@ -61,3 +61,23 @@ svg {
 #login-dropdown-list a {
   color: white;
 }
+
+.ngdialog.ngdialog-theme-default.width90perc .ngdialog-content{
+  width: 90%;
+}
+
+.ngdialog.ngdialog-theme-default.width80perc .ngdialog-content{
+  width: 80%;
+}
+
+.ngdialog.ngdialog-theme-default.width70perc .ngdialog-content{
+  width: 70%;
+}
+
+.ngdialog.ngdialog-theme-default.width60perc .ngdialog-content{
+  width: 60%;
+}
+
+.ngdialog.ngdialog-theme-default.width50perc .ngdialog-content{
+  width: 50%;
+}
