--- a/bwapp/client/views/replay.ng.jade
+++ b/bwapp/client/views/replay.ng.jade
@@ -2,6 +2,7 @@
   * Module: replay.ng.jade
   * Created by wjwong on 8/7/15.
   =========================================================*/
+toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'close-button':true}")
 .row
   div(style="position: absolute; z-index: 10;" class="col-sm-12")
     div(style='margin-top: 14px')
@@ -20,6 +21,13 @@
       button.btn.btn-default.pull-right(ng-click='selectReplay()')
         .fa.fa-video-camera &nbsp;Replay&nbsp;
       .pull-right &nbsp;&nbsp;
+      button.btn.btn-default.pull-right(ng-show='myreplay.data.act.length && frameid < myreplay.data.act.length-1', ng-click='updateReplay(1)')
+        .fa.fa-chevron-right &nbsp;Next&nbsp;
+      .pull-right &nbsp;&nbsp;
+      button.btn.btn-default.pull-right(ng-show='myreplay.data.act.length && frameid > 0', ng-click='updateReplay(-1)')
+        .fa.fa-chevron-left &nbsp;Previous&nbsp;
+      .pull-right &nbsp;&nbsp;
+
     div.notouch
       strong Navigation:
       br
@@ -36,39 +44,18 @@
   canvas(id="renderCanvasBab" style='width: 100%; height: 800px;')
   canvas(id="canvas_2D")
 
-  .panel.panel-default
-    .panel-heading Datatables | 
-      small ngRepeat + ngResource
-    .panel-body
-      div
-        //-(ng-controller='DataTableController')
-        table.row-border.hover(datatable='ng')
-          thead
-            tr
-              th Person ID
-              th First Name
-              th Last Name
-          tbody
-            tr(ng-repeat='person in persons')
-              td {{ person.id }}
-              td {{ person.firstName }}
-              td {{ person.lastName }}
-
 script#didReplayList(type="text/ng-template")
-  .panel.panel-default
-    .panel-heading Datatables | 
-      small ngRepeat + ngResource
-    .panel-body
-      div
-        //-(ng-controller='DataTableController')
-        table.row-border.hover(datatable='ng')
-          thead
-            tr
-              th Person ID
-              th First Name
-              th Last Name
-          tbody
-            tr(ng-repeat='person in persons')
-              td {{ person.id }}
-              td {{ person.firstName }}
-              td {{ person.lastName }}
+  h3 Available Replays
+  div
+    table.row-border.hover(datatable='ng', dt-options='dtOptions')
+      thead
+        tr
+          th
+          th Name
+          th Created
+      tbody
+        tr(ng-repeat='replay in ngDialogData.replays')
+          td(ng-click='remove(replay._id)')
+            .fa.fa-remove
+          td(title='{{replay._id}}', ng-click='closeThisDialog({open: replay._id})') {{ replay.name}}
+          td(ng-click='closeThisDialog({open: replay._id})') {{replay.created | date: 'yyyy-MM-dd h:mm:ss'}}
