enable marking of start and end goals

--- a/bwapp/client/views/replay.ng.jade
+++ b/bwapp/client/views/replay.ng.jade
@@ -21,13 +21,41 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
       button.btn.btn-default.pull-right(ng-click='selectReplay()')
         .fa.fa-video-camera &nbsp;Replay&nbsp;
       .pull-right &nbsp;&nbsp;
-      button.btn.btn-default.pull-right(ng-show='myreplay.data.act.length && frameid < myreplay.data.act.length-1', ng-click='updateReplay(1)')
-        .fa.fa-chevron-right &nbsp;Next&nbsp;
-      .pull-right &nbsp;&nbsp;
-      button.btn.btn-default.pull-right(ng-show='myreplay.data.act.length && frameid > 0', ng-click='updateReplay(-1)')
-        .fa.fa-chevron-left &nbsp;Previous&nbsp;
-      .pull-right &nbsp;&nbsp;
-
+      .panel.pull-right(ng-show='myreplay.data.act.length')
+        .btn.pull-left(disabled='true', ng-show='!(frameid > 0)')
+          .fa.fa-chevron-left
+        button.btn.btn-default.pull-left(title='previous', ng-show='frameid > 0', ng-click='updateReplay(-1)')
+          .fa.fa-chevron-left
+        .btn(disabled='true') Step
+        .btn.pull-right(disabled='true', ng-show='!(frameid < myreplay.data.act.length-1)')
+          .fa.fa-chevron-right
+        button.btn.btn-default.pull-right(title='next', ng-show='frameid < myreplay.data.act.length-1', ng-click='updateReplay(1)')
+          .fa.fa-chevron-right
+        br
+        button.btn.btn-default.pull-left(ng-click='startReplay()')
+          .fa.fa-caret-right Start
+        .btn(title='Fast Forward', disabled='true') Fast Fwd
+        button.btn.btn-default.pull-right(ng-click='endReplay()')
+          .fa.fa-angle-double-right End
+        br
+        button.btn.btn-default.pull-left(ng-click='markReplay(true)')
+          .fa.fa-flag &nbsp;Start&nbsp;
+        .btn(title='Fast Forward', disabled='true') Mark
+        button.btn.btn-default.pull-right(ng-click='markReplay(false)')
+          .fa.fa-trophy &nbsp;Goal&nbsp;
+        br
+        div(ng-show='myreplay.start || myreplay.end')
+          .btn.pull-left(disabled='true', ng-show='!myreplay.start || myreplay.start < 0')
+            .fa.fa-flag &nbsp;Start&nbsp;
+          button.btn.btn-default.pull-left(ng-show='myreplay.start > -1', ng-click='gotoMarkReplay(true)')
+            .fa.fa-flag &nbsp;Start&nbsp;
+          .btn(title='Go to mark', disabled='true') Go To
+          .btn.pull-right(disabled='true', ng-show='!myreplay.end || myreplay.end < 0')
+            .fa.fa-trophy &nbsp;Goal&nbsp;
+          button.btn.btn-default.pull-right(ng-show='myreplay.end > -1', ng-click='gotoMarkReplay(false)')
+            .fa.fa-trophy &nbsp;Goal&nbsp;
+          br
+        
     div.notouch
       strong Navigation:
       br
