--- a/bwapp/client/views/worldview.ng.jade
+++ b/bwapp/client/views/worldview.ng.jade
@@ -53,9 +53,12 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
       | Click and hold to drag and drop blocks
       br
       strong Move Up/Down: 
-      | Hold block, then press shift key
+      | Hold block, then press SHIFT key
       br
       | &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; and move mouse up/down
+      br
+      strong Rotate: 
+      | Hold block, then press ALT key
   canvas(id="renderCanvasBab" style='width: 100%; height: 800px;')
   canvas(id="canvas_2D")
   
