--- a/bwapp/client/angle/less/custom/custom.less
+++ b/bwapp/client/angle/less/custom/custom.less
@@ -49,8 +49,8 @@ svg {
 }
 
 .shadowbox {
-  -webkit-box-shadow: 0 5px 15px rgba(0,0,0,.5);
-  box-shadow: 0 5px 15px rgba(0,0,0,.5);
+  -webkit-box-shadow: 0 5px 15px rgba(0,0,0,.5) !important;
+  box-shadow: 0 5px 15px rgba(0,0,0,.5) !important;
   outline: 0;
 }
 
