--- a/bwapp/client/views/replay.ng.jade
+++ b/bwapp/client/views/replay.ng.jade
@@ -55,20 +55,32 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
           button.btn.btn-default.pull-right(ng-show='myreplay.end > -1', ng-click='gotoMarkReplay(false)')
             .fa.fa-trophy &nbsp;Goal&nbsp;
           br
-        
+        button.btn.btn-default.pull-left(ng-show='myreplay.start && myreplay.end && !myreplay.public', ng-click='togglePublic()')
+          .fa.fa-unlock &nbsp;Make Public&nbsp;
+        button.btn.btn-default.pull-left(ng-show='myreplay.start && myreplay.end && myreplay.public', ng-click='togglePublic()')
+          .fa.fa-lock &nbsp;Make Private&nbsp;
     div.notouch
-      strong Navigation:
+      strong Instructions:
       br
-      strong Move Camera: 
-      | Use WASD keys
+      strong Replay: 
+      | Choose a replay to view
       br
-      strong Move Blocks: 
-      | Click and hold to drag and drop blocks
+      strong Step &lt; &gt;: 
+      | Use the &lt; and &gt; arrows to step through replay
       br
-      strong Move Up/Down: 
-      | Hold block, then press shift key
+      strong Fast Forward: 
+      | Click on Start or End to fast forward the replay
       br
-      | &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; and move mouse up/down
+      strong Mark Start &amp; Goal: 
+      | Mark the Start and Goal to enable publication
+      br
+      strong Goto Start &amp; Goal: 
+      | Review the Start and Goal
+      br
+      strong Public: 
+      | Make this assignable to agents
+      br
+
   canvas(id="renderCanvasBab" style='width: 100%; height: 800px;')
   canvas(id="canvas_2D")
 
