--- a/bwapp/client/views/gameview.ng.jade
+++ b/bwapp/client/views/gameview.ng.jade
@@ -1,11 +1,8 @@
 //-**=========================================================
-  * Module: worldview.ng.jade
-  * Created by wjwong on 7/27/15.
+  * Module: gameview.ng.jade
+  * Created by wjwong on 8/12/15.
   =========================================================*/
-//-h3
-  | Welcome to {{app.name}}
-  small
-  //-small {{ "dashboard.WELCOME" | translate:{ appName: } }} !
+
 toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'close-button':true}")
 .row
   div(style="position: absolute; z-index: 10;" class="col-sm-12")
@@ -43,7 +40,6 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
             a(ng-click='saveReplay()')
               .glyphicons.floppy_save Save
       .pull-right &nbsp;&nbsp;
-
     div.notouch
       strong Navigation:
       br
@@ -62,7 +58,6 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
       | Hold block, then press ALT key
   canvas(id="renderCanvasBab" style='width: 100%; height: 800px;')
   canvas(id="canvas_2D")
-  
 script#didReplayName(type="text/ng-template")
   form.form-inline.ng-pristine.ng-valid(role="form",novalidate, name='replayname', ng-submit='closeThisDialog(savename)')
     .form-group
