updated loading bar and created game view for players

--- a/bwapp/client/views/app.ng.jade
+++ b/bwapp/client/views/app.ng.jade
@@ -9,8 +9,9 @@ header.topnavbar-wrapper(ng-include="'client/views/partials/top-navbar.html'")
 // offsidebar
 //-aside.offsidebar(ng-include="'client/views/partials/offsidebar.ng.html'")
 // Main section
-section(style='margin-left:0px')
-  // Page content
-  .content-wrapper(ui-view="", autoscroll="false", ng-class="app.viewAnimation")
+.wrapper
+  section(style='margin-left:0px')
+    // Page content
+    .content-wrapper(ui-view="", autoscroll="false", ng-class="app.viewAnimation")
 // Page footer
 // footer ng-include="'client/views/partials/footer.ng.html'"></footer
