--- a/bwapp/client/views/partials/top-navbar.ng.jade
+++ b/bwapp/client/views/partials/top-navbar.ng.jade
@@ -4,7 +4,7 @@
 nav.navbar.topnavbar(role="navigation")
   // START navbar header
   .navbar-header
-    a.navbar-brand(href="#/")
+    a.navbar-brand(href="/")
       .brand-logo(style="font-size:1em; color:white;")
         span.fa.fa-cubes  Block World
         // img src="img/logo.png" alt="App Logo" class="img-responsive" /
