--- a/bwapp/client/views/replay.ng.jade
+++ b/bwapp/client/views/replay.ng.jade
@@ -6,20 +6,24 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
 .row
   div(style="position: absolute; z-index: 10;" class="col-sm-12")
     div(style='margin-top: 14px')
-      .btn-group.mb-sm.pull-right(dropdown="dropdown")
-        button.btn.dropdown-toggle.btn-default(type="button", ng-disabled="disabled", dropdown-toggle="", aria-haspopup="true", aria-expanded="true")
-          .fa.fa-cog &nbsp;Settings&nbsp;
-          span.caret
-        ul.dropdown-menu(role="menu")
-          li
-            a(ng-click='resetWorld();')
-              .fa.fa-refresh  Reset
-          li
-            a(ng-click='toggleGrid();')
-              .fa.fa-th-large  Grid
-      .pull-right &nbsp;&nbsp;
-      button.btn.btn-default.pull-right(ng-click='selectReplay()')
-        .fa.fa-video-camera &nbsp;Replay&nbsp;
+      div(ng-if='!jobid')
+        .btn-group.mb-sm.pull-right(dropdown="dropdown")
+          button.btn.dropdown-toggle.btn-default(type="button", ng-disabled="disabled", dropdown-toggle="", aria-haspopup="true", aria-expanded="true")
+            .fa.fa-cog &nbsp;Settings&nbsp;
+            span.caret
+          ul.dropdown-menu(role="menu")
+            li
+              a(ng-click='resetWorld();')
+                .fa.fa-refresh  Reset
+            li
+              a(ng-click='toggleGrid();')
+                .fa.fa-th-large  Grid
+        .pull-right &nbsp;&nbsp;
+        button.btn.btn-default.pull-right(ng-click='selectReplay()')
+          .fa.fa-video-camera &nbsp;Replay&nbsp;
+      div(ng-if='jobid')
+        button.btn.btn-default.pull-right(ng-click='toggleGrid();')
+          .fa.fa-th-large  Grid
       .pull-right &nbsp;&nbsp;
       .panel.pull-right(ng-show='myreplay.data.act.length')
         .btn.pull-left(disabled='true', ng-show='!(frameid > 0)')
@@ -34,15 +38,16 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
         br
         button.btn.btn-default.pull-left(ng-click='startReplay()')
           .fa.fa-caret-right Start
-        .btn(title='Fast Forward', disabled='true') Fast Fwd
+        .btn(title='Fast Forward', disabled='true') FF
         button.btn.btn-default.pull-right(ng-click='endReplay()')
           .fa.fa-angle-double-right End
-        br
-        button.btn.btn-default.pull-left(ng-click='markReplay(true)')
-          .fa.fa-flag &nbsp;Start&nbsp;
-        .btn(title='Fast Forward', disabled='true') Mark
-        button.btn.btn-default.pull-right(ng-click='markReplay(false)')
-          .fa.fa-trophy &nbsp;Goal&nbsp;
+        div(ng-if='!jobid')
+          br
+          button.btn.btn-default.pull-left(ng-click='markReplay(true)')
+            .fa.fa-flag &nbsp;Start&nbsp;
+          .btn(title='Fast Forward', disabled='true') Mark
+          button.btn.btn-default.pull-right(ng-click='markReplay(false)')
+            .fa.fa-trophy &nbsp;Goal&nbsp;
         br
         div(ng-show='myreplay.start !== undefined || myreplay.end !== undefined')
           .btn.pull-left(disabled='true', ng-show='myreplay.start === undefined || myreplay.start < 0')
@@ -61,25 +66,27 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
           .fa.fa-lock &nbsp;Make Private&nbsp;
     div.notouch
       strong Instructions:
-      br
-      strong Replay: 
-      | Choose a replay to view
+      div(ng-if='!jobid')
+        br
+        strong Replay: 
+        | Choose a replay to view
       br
       strong Step &lt; &gt;: 
       | Use the &lt; and &gt; arrows to step through replay
       br
       strong Fast Forward: 
       | Click on Start or End to fast forward the replay
-      br
-      strong Mark Start &amp; Goal: 
-      | Mark the Start and Goal to enable publication
-      br
-      strong Goto Start &amp; Goal: 
-      | Review the Start and Goal
-      br
-      strong Public: 
-      | Make this assignable to agents
-      br
+      div(ng-if='!jobid')
+        br
+        strong Mark Start &amp; Goal: 
+        | Mark the Start and Goal to enable publication
+        br
+        strong Goto Start &amp; Goal: 
+        | Review the Start and Goal
+        br
+        strong Public: 
+        | Make this assignable to agents
+        br
 
   canvas(id="renderCanvasBab" style='width: 100%; height: 800px;')
   canvas(id="canvas_2D")
