--- a/bwapp/client/views/worldview.ng.jade
+++ b/bwapp/client/views/worldview.ng.jade
@@ -44,7 +44,7 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
               .glyphicons.floppy_save Save
       .pull-right &nbsp;&nbsp;
 
-    div.notouch
+    .well.notouch.col-sm-4(style='background-color: rgba(255,255,255,0.5)')
       strong Navigation:
       br
       strong Move Camera: 
