fixed timing issues with getting jobs and replays from mongo

--- a/bwapp/client/views/goalview.ng.jade
+++ b/bwapp/client/views/goalview.ng.jade
@@ -9,7 +9,7 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
     div(style='margin-top: 14px')
       button.btn.btn-default.pull-right(ng-click='toggleGrid();')
         .fa.fa-th-large &nbsp;Grid
-    div.notouch(style = 'margin-left:16px')
+    .well.notouch.col-sm-4.shadowbox(style='background-color: rgba(255,255,255,0.5)')
       h1 Goal
       strong Move blocks to match this design
 
