--- a/bwapp/client/views/gameview.ng.jade
+++ b/bwapp/client/views/gameview.ng.jade
@@ -24,7 +24,7 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
       .pull-right &nbsp;&nbsp;
       button.btn.btn-success.pull-right(ng-click='submit()')
         .fa.fa-send &nbsp;Submit&nbsp;
-    .well.notouch.col-sm-4(style='background-color: rgba(255,255,255,0.5)')
+    .well.notouch.col-sm-4.shadowbox(style='background-color: rgba(255,255,255,0.5)')
       h3 Click 
         a(ng-if='myreplay', href="goal/{{gameid}}", target="_blank") 
           |  View Goal 
