--- a/bwapp/client/views/games.ng.jade
+++ b/bwapp/client/views/games.ng.jade
@@ -11,7 +11,7 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
           h4.panel-title
             i.fa.fa-inbox
             | &nbsp; Available Games
-        table.table.table-condensed(ng-if='jobs', datatable="ng", dt-options="dtOptions")
+        table.table.table-condensed(ng-if='jobs.length', datatable="ng", dt-options="dtOptions")
           thead
             tr
               //-th
@@ -30,7 +30,7 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
           h4.panel-title
             i.fa.fa-inbox
             | &nbsp; Submitted Games
-        table.table.table-condensed(ng-if='jobs', datatable="ng", dt-options="dtOptions")
+        table.table.table-condensed(ng-if='jobs.length', datatable="ng", dt-options="dtOptions")
           thead
             tr
               th Game
