--- a/bwapp/client/views/worldview.ng.jade
+++ b/bwapp/client/views/worldview.ng.jade
@@ -53,6 +53,9 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
       strong Move Blocks: 
       | Click and hold to drag and drop blocks
       br
+      strong Point Camera: 
+      | Click and move mouse to pivot camera
+      br
       strong Move Up/Down: 
       | Hold block, then press SHIFT key
       br
