--- a/bwapp/client/views/gameview.ng.jade
+++ b/bwapp/client/views/gameview.ng.jade
@@ -34,16 +34,19 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
       strong Move Camera: 
       | Use WASD keys
       br
+      strong Point Camera: 
+      | Click and move mouse to pivot camera
+      br
       strong Move Blocks: 
       | Click and hold to drag and drop blocks
       br
       strong Move Up/Down: 
-      | Hold block, then press SHIFT key
-      br
-      | &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; and move mouse up/down
+      | Hold block, then press SHIFT key and move mouse up/down
       br
       strong Rotate: 
       | Hold block, then press ALT key
+      br
+      strong(style='color:#27c24c') When done click SUBMIT
   canvas(id="renderCanvasBab" style='width: 100%; height: 800px;')
   canvas(id="canvas_2D")
 script#didReplayName(type="text/ng-template")
