--- a/bwapp/client/views/gameview.ng.jade
+++ b/bwapp/client/views/gameview.ng.jade
@@ -6,7 +6,7 @@
 toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'close-button':true}")
 .row
   div(style="position: absolute; z-index: 10;" class="col-sm-12")
-    div(style='margin-top: 14px')
+    div(ng-show='myreplay', style='margin-top: 14px')
       .btn-group.mb-sm.pull-right(dropdown="dropdown")
         button.btn.dropdown-toggle.btn-default(type="button", ng-disabled="disabled", dropdown-toggle="", aria-haspopup="true", aria-expanded="true")
           .fa.fa-cog &nbsp;Settings&nbsp;
@@ -24,29 +24,36 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
       .pull-right &nbsp;&nbsp;
       button.btn.btn-success.pull-right(ng-click='submit()')
         .fa.fa-send &nbsp;Submit&nbsp;
-    .well.notouch.col-sm-4.shadowbox(style='background-color: rgba(255,255,255,0.5)')
-      h3 Click 
-        a(ng-if='myreplay', href="goal/{{gameid}}", target="_blank") 
-          |  View Goal 
-        | To See Design
-      strong Navigation:
-      br
-      strong Move Camera: 
-      | Use WASD keys
-      br
-      strong Point Camera: 
-      | Click and move mouse to pivot camera
-      br
-      strong Move Blocks: 
-      | Click and hold to drag and drop blocks
-      br
-      strong Move Up/Down: 
-      | Hold block, then press SHIFT key and move mouse up/down
-      br
-      strong Rotate: 
-      | Hold block, then press ALT key
-      br
-      strong(style='color:#27c24c') When done click SUBMIT
+    #panelInst.panel.panel-default.notouch.col-sm-4.shadowbox(style='background-color: rgba(255,255,255,0.5)')
+      .panel-heading(ng-class="{'panel-heading-collapsed':panelInst}", style='background-color: rgba(255,255,255,0.0)')
+        strong Instructions
+        paneltool(tool-collapse, ng-init="panelInst=false")
+      .panel-wrapper(collapse="panelInst")
+        .panel-body(ng-show='myreplay')
+          h3 Click 
+            a(href="goal/{{gameid}}", target="_blank") 
+              |  View Goal 
+            | To See Design
+          strong Move Camera: 
+          | Use WASD keys
+          br
+          strong Point Camera: 
+          | Click and move mouse to pivot camera
+          br
+          strong Move Blocks: 
+          | Click and hold to drag and drop blocks
+          br
+          strong Move Up/Down: 
+          | Hold block, then press SHIFT key and move mouse up/down
+          br
+          strong Rotate: 
+          | Hold block, then press ALT key
+          br
+          strong(style='color:#27c24c') When done click SUBMIT
+      .panel-body(ng-show='!myreplay')
+        h3 No Replay Found 
+          a(href="/")
+            | Return to Games
   canvas(id="renderCanvasBab" style='width: 100%; height: 800px;')
   canvas(id="canvas_2D")
 script#didReplayName(type="text/ng-template")
