--- a/bwapp/client/views/main.ng.jade
+++ b/bwapp/client/views/main.ng.jade
@@ -1,7 +1,7 @@
 //
    Created by wjwong on 7/26/15.
 div(style="top: 118px; width: 100%;  height: 600px;  position: relative;  margin: 0 auto;  overflow: hidden;  background: transparent url(img/buidlingblocks.jpg) repeat 0% 0%; background-position: center; background-size: 70% 700px;")
-.abs-center.wd-xl(style="overflow: visible;")
+.abs-center.wd-xl(style="overflow: visible; position: absolute")
   // START panel
   .panel.widget.b0(style="margin: 10px;")
     .panel-body.shadowbox
