--- a/bwapp/client/views/worldview.ng.jade
+++ b/bwapp/client/views/worldview.ng.jade
@@ -43,26 +43,29 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
             a(ng-click='saveReplay()')
               .glyphicons.floppy_save Save
       .pull-right &nbsp;&nbsp;
+    #panelInst.panel.panel-default.notouch.col-sm-4.shadowbox(style='background-color: rgba(255,255,255,0.5)')
+      .panel-heading(ng-class="{'panel-heading-collapsed':panelInst}", style='background-color: rgba(255,255,255,0.0)')
+        strong Navigation
+        paneltool(tool-collapse, ng-init="panelInst=false")
+      .panel-wrapper(collapse="panelInst")
+        .panel-body
+          strong Move Camera: 
+          | Use WASD keys
+          br
+          strong Move Blocks: 
+          | Click and hold to drag and drop blocks
+          br
+          strong Point Camera: 
+          | Click and move mouse to pivot camera
+          br
+          strong Move Up/Down: 
+          | Hold block, then press SHIFT key
+          br
+          | &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; and move mouse up/down
+          br
+          strong Rotate: 
+          | Hold block, then press ALT key
 
-    .well.notouch.col-sm-4.shadowbox(style='background-color: rgba(255,255,255,0.5)')
-      strong Navigation:
-      br
-      strong Move Camera: 
-      | Use WASD keys
-      br
-      strong Move Blocks: 
-      | Click and hold to drag and drop blocks
-      br
-      strong Point Camera: 
-      | Click and move mouse to pivot camera
-      br
-      strong Move Up/Down: 
-      | Hold block, then press SHIFT key
-      br
-      | &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; and move mouse up/down
-      br
-      strong Rotate: 
-      | Hold block, then press ALT key
   canvas(id="renderCanvasBab" style='width: 100%; height: 800px;')
   canvas(id="canvas_2D")
   
