--- a/bwapp/client/angle/less/custom/custom.less
+++ b/bwapp/client/angle/less/custom/custom.less
@@ -81,3 +81,23 @@ svg {
 .ngdialog.ngdialog-theme-default.width50perc .ngdialog-content{
   width: 50%;
 }
+
+#loadoverlay {
+  width: 100%;
+  height: 100%;
+  top: 0px;
+  left: 0px;
+  position: fixed;
+  display: block;
+  opacity: 0.7;
+  background-color: #fff;
+  z-index: 200;
+  text-align: center;
+}
+
+#loadoverlay-image {
+  position: absolute;
+  top: 200px;
+  left: 300px;
+  z-index: 100;
+}
