--- a/bwapp/client/views/app.ng.jade
+++ b/bwapp/client/views/app.ng.jade
@@ -10,6 +10,11 @@ header.topnavbar-wrapper(ng-include="'client/views/partials/top-navbar.html'")
 //-aside.offsidebar(ng-include="'client/views/partials/offsidebar.ng.html'")
 // Main section
 .wrapper
+  //-.row-fluid
+    #loadoverlay.container-fluid
+      #loadoverlay-image.text-center(style="position:fixed;top:50%;left:50%; color:#23b7e5;")
+        i.fa.fa-4x.fa-spin.fa-cube
+        h3(style="color:#23b7e5;") Loading...
   section(style='margin-left:0px')
     // Page content
     .content-wrapper(ui-view="", autoscroll="false", ng-class="app.viewAnimation")
