--- a/bwapp/client/views/app.ng.jade
+++ b/bwapp/client/views/app.ng.jade
@@ -10,7 +10,7 @@ header.topnavbar-wrapper(ng-include="'client/views/partials/top-navbar.html'")
 //-aside.offsidebar(ng-include="'client/views/partials/offsidebar.ng.html'")
 // Main section
 .wrapper
-  //-.row-fluid
+  .row-fluid(ng-show='!dataloaded')
     #loadoverlay.container-fluid
       #loadoverlay-image.text-center(style="position:fixed;top:50%;left:50%; color:#23b7e5;")
         i.fa.fa-4x.fa-spin.fa-cube
