--- a/bwapp/client/views/tasks.ng.jade
+++ b/bwapp/client/views/tasks.ng.jade
@@ -9,7 +9,28 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
       accordion-heading
         h4.panel-title
           i.fa.fa-inbox
-          | &nbsp; Available Games
+          | &nbsp; 1. Games to Review
+      table.table.table-condensed#listgames(ng-if='dataready', datatable="ng", dt-options="dtOptions")
+        thead
+          tr
+            th
+            th Name
+            th Created
+            th By
+        tbody
+          tr(ng-repeat='replay in blockreplays', ng-if='!replay.public')
+            td(ng-click='remove(replay._id)')
+              .fa.fa-remove
+            td(title='{{replay._id}}', ng-click='$state.go("app.replay", {taskid: replay._id})') {{ replay.name}}
+            td(ng-click='$state.go("app.replay", {taskid: replay._id})') {{replay.created | date: 'yyyy-MM-dd h:mm:ss'}}
+            td(ng-click='$state.go("app.replay", {taskid: replay._id})') {{replay.creator}}
+.row
+  accordion
+    accordion-group.panel-primary.shadowbox(ng-init="isOpen = true", is-open="isOpen")
+      accordion-heading
+        h4.panel-title
+          i.fa.fa-inbox
+          | &nbsp; 2. Available Games to Assign
       table.table.table-condensed#listgames(ng-if='dataready', datatable="ng", dt-options="dtOptions")
         thead
           tr
@@ -19,9 +40,12 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
             th By
         tbody
           tr(ng-repeat='replay in blockreplays', ng-if='replay.public')
-            td(ng-click='remove(replay._id)')
-              .fa.fa-remove
-            td(title='{{replay._id}}', ng-click='selectAgent(replay._id)') {{ replay.name}}
+            td
+              button.btn.btn-xs.btn-danger(title='Remove', ng-click='remove(replay._id)')
+                .fa.fa-remove
+              button.btn.btn-xs.btn-info(title='Review Replay', ng-click='$state.go("app.replay", {taskid: replay._id})')
+                .fa.fa-eye &nbsp;Review
+            td(title='{{replay._id}}', ng-click='selectAgent(replay._id, "job")') {{ replay.name}}
             td {{replay.created | date: 'yyyy-MM-dd h:mm:ss'}}
             td {{replay.creator}}
 .row
@@ -30,7 +54,7 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
       accordion-heading
         h4.panel-title
           i.fa.fa-inbox
-          | &nbsp; Assigned Games
+          | &nbsp; 3. Assigned Games
       table.table.table-condensed#asngames(ng-if='dataready', datatable="ng", dt-options="dtOptions")
         thead
           tr
@@ -50,7 +74,7 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
       accordion-heading
         h4.panel-title
           i.fa.fa-inbox
-          | &nbsp; Submitted Games
+          | &nbsp; 4. Submitted Games
       table.table.table-condensed#subgames(ng-if='dataready', datatable="ng", dt-options="dtOptions")
         thead
           tr
@@ -59,12 +83,73 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
             th Player
             th Submitted
         tbody
-          tr(ng-repeat='job in jobs', title='ID: {{job._id}} Created By: {{job.creator}}', ng-if='job.submitted')
+          tr(ng-repeat='job in jobs', title='ID: {{job._id}} Created By: {{job.creator}}', ng-if='job.submitted && !job.kfsubmitted')
             td(ng-click='removeJob(job._id)')
               .fa.fa-remove
-            td(ng-click='$state.go("app.replay", {jobid: job._id})') {{TaskName(job.task)}}
-            td(ng-click='$state.go("app.replay", {jobid: job._id})') {{AgentName(job.agent)}}
-            td(ng-click='$state.go("app.replay", {jobid: job._id})') {{job.submitted | date: 'yyyy-MM-dd h:mm'}}
+            td(ng-click='$state.go("app.replay", {gameid: job._id})') {{TaskName(job.task)}}
+            td(ng-click='$state.go("app.replay", {gameid: job._id})') {{AgentName(job.agent)}}
+            td(ng-click='$state.go("app.replay", {gameid: job._id})') {{job.submitted | date: 'yyyy-MM-dd h:mm'}}
+  accordion.col-sm-6
+    accordion-group.panel-primary.shadowbox(ng-init="isOpen = true", is-open="isOpen")
+      accordion-heading
+        h4.panel-title
+          i.fa.fa-inbox
+          | &nbsp; 5. Assign Description Annotations
+      table.table.table-condensed#subgames(ng-if='dataready', datatable="ng", dt-options="dtOptions")
+        thead
+          tr
+            th
+            th Game
+            th Player
+            th Submitted
+        tbody
+          tr(ng-repeat='job in jobs', title='ID: {{job._id}} Created By: {{job.creator}}', ng-if='job.kfsubmitted')
+            td(ng-click='removeJob(job._id)')
+              .fa.fa-remove
+            td(title='{{job._id}}', ng-click='selectAgent(job._id, "desc")') {{TaskName(job.task)}}
+            td(ng-click='$state.go("app.describe", {gameid: job._id})') {{AgentName(job.agent)}}
+            td(ng-click='$state.go("app.describe", {gameid: job._id})') {{job.submitted | date: 'yyyy-MM-dd h:mm'}}
+  accordion.col-sm-6
+    accordion-group.panel-primary.shadowbox(ng-init="isOpen = true", is-open="isOpen")
+      accordion-heading
+        h4.panel-title
+          i.fa.fa-inbox
+          | &nbsp; 6. Assign Action Annotations
+      table.table.table-condensed#subgames(ng-if='dataready', datatable="ng", dt-options="dtOptions")
+        thead
+          tr
+            th
+            th Game
+            th Player
+            th Submitted
+        tbody
+          tr(ng-repeat='job in jobs', title='ID: {{job._id}} Created By: {{job.creator}}', ng-if='job.kfsubmitted')
+            td(ng-click='removeJob(job._id)')
+              .fa.fa-remove
+            td(title='{{job._id}}', ng-click='selectAgent(job._id, "act")') {{TaskName(job.task)}}
+            td(ng-click='$state.go("app.describe", {gameid: job._id})') {{AgentName(job.agent)}}
+            td(ng-click='$state.go("app.describe", {gameid: job._id})') {{job.submitted | date: 'yyyy-MM-dd h:mm'}}
+  accordion.col-sm-6
+    accordion-group.panel-primary.shadowbox(ng-init="isOpen = true", is-open="isOpen")
+      accordion-heading
+        h4.panel-title
+          i.fa.fa-inbox
+          | &nbsp; 7. Working Annotations
+      table.table.table-condensed#subgames(ng-if='dataready', datatable="ng", dt-options="dtOptions")
+        thead
+          tr
+            th
+            th Game
+            th Agent
+            th Type
+        tbody
+          tr(ng-repeat='annot in annotations', title='ID: {{annot._id}} Created By: {{annot.creator}}', ng-if='!annot.submitted')
+            td(ng-click='removeAnnot(annot._id)')
+              .fa.fa-remove
+            td(ng-click='$state.go("app.replay", {gameid: annot._id})') {{TaskName(findById(jobs, annot.job).task)}}
+            td(ng-click='$state.go("app.replay", {gameid: annot._id})') {{AgentName(annot.agent)}}
+            td(ng-click='$state.go("app.replay", {gameid: annot._id})') {{annot.type}}
+
 
 
 script#didAgents(type="text/ng-template")
