--- a/bwapp/client/views/genworld.ng.jade
+++ b/bwapp/client/views/genworld.ng.jade
@@ -4,21 +4,21 @@
   =========================================================*/
 toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'close-button':true}")
 .row-fluid.col-sm-12
-  div(style='margin-top: 14px')
-    form.form-inline.ng-pristine.ng-valid(name='myform')
+  div(style='margin-top: 14px', ng-if='!isgen')
+    form.form-inline.ng-pristine.ng-valid(name='myform', ng-submit='startGen(ccnt, itr)')
       .form-group
         label Cube Count: 
-        select.form-control 
-          option(ng-repeat='i in cubeprops track by $index', ng-model='ccnt', value='{{$index+1}}') {{$index+1}}
+        select.form-control(ng-model='ccnt')
+          option(ng-repeat='i in cubeprops track by $index', value='{{$index+1}}') {{$index+1}}
       label &nbsp;&nbsp;&nbsp;
       .form-group
         label Generate Iterations:
-        select.form-control
-          each v in [20,40,80,160]
-            option(ng-model='itr', value='#{v}') #{v}
-
+        select.form-control(ng-model='itr')
+          each v in [10,40,80,160,320]
+            option(value='#{v}') #{v}
+      button.btn.btn-default(type='submit') Go
   hr
-  h3 Render for: {{dbid}}
+  h3(ng-show='dbid') Iteration: {{curitr}}  Render for: {{dbid}}
   div(style="position: absolute; z-index: 10;" class="col-sm-12")
     div(style='margin-top: 14px')
       button.btn.btn-sm(ng-click='resetWorld();')
@@ -38,6 +38,7 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
         br
   canvas(id="renderCanvasBab" style='width: 640px; height: 440px;')
   canvas(id="canvas_2D")
+  canvas(id="screencap", style='width: 640px; height: 440px;')
 form(name='annotform')
   div(ng-show='myreplay.keyframes.length', ng-repeat = 'kf in myreplay.keyframes')
     .row-fluid.col-sm-12(style='border-bottom:solid 2px #eee;')
